[package]
name = "crdt_tree"
version = "0.0.1"
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Tree Conflict-free Replicated Data Type (CRDT)"
homepage = "http://maidsafe.net"
edition = "2018"
license = "MIT OR BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/maidsafe/crdt-tree"

[dependencies]
rand = { version = "~0.7.3", default-features = false }
serde = { version = "1.0.113", default-features = false, features = ["derive"] }
crdts = "4.2.0"
quickcheck = "0.9"

[dev-dependencies]
quickcheck_macros = "0.9"
