[package]
name = "crdt_tree"
version = "0.0.14"
authors = [ "MaidSafe Developers <dev@maidsafe.net>" ]
description = "Tree Conflict-free Replicated Data Type (CRDT)"
homepage = "http://maidsafe.net"
edition = "2018"
license = "MIT OR BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/maidsafe/crdt-tree"

[dependencies]
crdts = "4.2.0"
quickcheck = "0.9"
log = "0.4.11"

  [dependencies.rand]
  version = "~0.7.3"
  default-features = false

  [dependencies.serde]
  version = "1.0.113"
  default-features = false
  features = [ "derive" ]
